--- a/tutorial01_load_vulkan/app/build.gradle
+++ b/tutorial01_load_vulkan/app/build.gradle
@@ -27,7 +27,7 @@ android {
         versionName "1.1.0"
         externalNativeBuild {
             cmake {
-                abiFilters "armeabi-v7a", 'arm64-v8a', 'x86', 'x86_64'
+                abiFilters 'arm64-v8a'
                 arguments '-DANDROID_TOOLCHAIN=clang', '-DANDROID_STL=c++_static'
             }
         }
