--- a/tutorial05_triangle/app/build.gradle
+++ b/tutorial05_triangle/app/build.gradle
@@ -34,7 +34,7 @@ android {
         }
         externalNativeBuild {
             cmake {
-                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+                abiFilters 'arm64-v8a'
                 arguments '-DANDROID_TOOLCHAIN=clang', '-DANDROID_STL=c++_static'
             }
         }
