--- a/tutorial01_load_vulkan/app/src/main/AndroidManifest.xml
+++ b/tutorial01_load_vulkan/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
         package="com.android.example.vulkan.tutorials.one"
         android:versionCode="272"
         android:versionName="1.1.0">
-
-    <application android:label="@string/app_name"
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <application android:label="@string/app_name" android:requestLegacyExternalStorage="true"
       android:theme="@style/Application.Fullscreen">
         <activity
             android:name=".MainActivity"
